best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -7,32 +7,33 @@
 
 * 测验结果
 
-| 姓名   | 2023-09-11 |
-|-------+------------|
-| 陈嘉鹏 |          1 |
-| 廖哲   |          2 |
-| 刘宁   |          3 |
-| 秦铭杉 |          4 |
-| 黄佳鹏 |          5 |
-| 覃宇江 |          6 |
-| 唐瑞钦 |          7 |
-| 曾世强 |          8 |
-| 魏智锋 |          9 |
-| 刘燃东 |         10 |
-| 陈述亮 |         11 |
-| 李境松 |         12 |
-| 刘志豪 |         13 |
-| 韦海永 |         14 |
-| 叶子超 |         15 |
-| 张翔宇 |         16 |
-| 吴志挥 |         17 |
-| 陈子健 |         18 |
-| 刁扬春 |         19 |
-| 潘嘉豪 |          - |
-| 朱荣如 |          - |
-| 岑宇森 |            |
-| 林宝荣 |            |
-| 曾凯   |            |
+| 姓名   | 2023-09-11 | 2023-10-30 |
+|-------+------------+------------|
+| 陈嘉鹏 |          1 |            |
+| 廖哲   |          2 |            |
+| 刘宁   |          3 |            |
+| 秦铭杉 |          4 |            |
+| 黄佳鹏 |          5 |            |
+| 覃宇江 |          6 |            |
+| 唐瑞钦 |          7 |            |
+| 曾世强 |          8 |            |
+| 魏智锋 |          9 |            |
+| 刘燃东 |         10 |            |
+| 陈述亮 |         11 |            |
+| 李境松 |         12 |            |
+| 刘志豪 |         13 |            |
+| 韦海永 |         14 |            |
+| 叶子超 |         15 |            |
+| 张翔宇 |         16 |            |
+| 吴志挥 |         17 |            |
+| 陈子健 |         18 |            |
+| 刁扬春 |         19 |            |
+| 潘嘉豪 |          - |            |
+| 朱荣如 |          - |            |
+| 岑宇森 |            |            |
+| 林宝荣 |            |            |
+| 曾凯   |            |            |
 
 备注:
 - 2023-09-11, 创建 helloworld、编译、运行，独立完成
+- 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
