--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -6,60 +6,65 @@
 
 - 学习委员: 黄军帮
 
+
+|     1 |     2 |     3 |     4 |     5 |   6 |
+| 吴嘉城 | 曾宏燊 | 杨耀嘉 | 刘仁杰 | 林俊贤 | 杨富 |
+
 * 测验结果
 
-| 姓名   | 2023-09-07 |
-|-------+------------|
-| 刘鹏   |          1 |
-| 甘成杰 |          2 |
-| 杨富   |          3 |
-| 江坤涛 |          4 |
-| 程春平 |          5 |
-| 吴淑豪 |          6 |
-| 刘金麓 |          7 |
-| 邓义柏 |          8 |
-| 梁炽勇 |          9 |
-| 林俊贤 |         10 |
-| 黄锡东 |         11 |
-| 李毅   |         12 |
-| 李进斌 |         13 |
-| 杨耀嘉 |         14 |
-| 官名福 |         15 |
-| 陈宇川 |         16 |
-| 杜喆   |         17 |
-| 黄颜徽 |         18 |
-| 罗秀洋 |         19 |
-| 王艺楠 |         20 |
-| 盘泽强 |         21 |
-| 李德致 |         22 |
-| 王上标 |         23 |
-| 肖毅良 |         24 |
-| 张明达 |         25 |
-| 周远龙 |         26 |
-| 王俊杰 |         27 |
-| 曾翔   |         28 |
-| 江金涛 |         29 |
-| 陈翕   |         30 |
-| 黄军帮 |         31 |
-| 刘天宇 |         32 |
-| 吴嘉城 |         33 |
-| 夏志豪 |         34 |
-| 林显诚 |         35 |
-| 周枫   |          - |
-| 曾宏燊 |          - |
-| 肖峰   |          - |
-| 左亮   |          - |
-| 符文财 |          - |
-| 谢鹤鸣 |          - |
-| 邓炜祺 |          - |
-| 韦代帅 |          - |
-| 郭小龙 |          - |
-| 魏坤   |          - |
-| 车斌涛 |          - |
-| 何锦晖 |          - |
-| 刘仁杰 |            |
-| 黄萧   |            |
+| 姓名   | 2023-09-07 | 2023-10-30 |
+|-------+------------+------------|
+| 刘鹏   |          1 |          7 |
+| 甘成杰 |          2 |          1 |
+| 杨富   |          3 |            |
+| 江坤涛 |          4 |            |
+| 程春平 |          5 |            |
+| 吴淑豪 |          6 |          3 |
+| 刘金麓 |          7 |         14 |
+| 邓义柏 |          8 |         10 |
+| 梁炽勇 |          9 |         24 |
+| 林俊贤 |         10 |         22 |
+| 黄锡东 |         11 |         13 |
+| 李毅   |         12 |         19 |
+| 李进斌 |         13 |         21 |
+| 杨耀嘉 |         14 |         23 |
+| 官名福 |         15 |         12 |
+| 陈宇川 |         16 |         16 |
+| 杜喆   |         17 |         26 |
+| 黄颜徽 |         18 |            |
+| 罗秀洋 |         19 |            |
+| 王艺楠 |         20 |         18 |
+| 盘泽强 |         21 |         15 |
+| 李德致 |         22 |         20 |
+| 王上标 |         23 |            |
+| 肖毅良 |         24 |            |
+| 张明达 |         25 |         27 |
+| 周远龙 |         26 |         28 |
+| 王俊杰 |         27 |          9 |
+| 曾翔   |         28 |         11 |
+| 江金涛 |         29 |          5 |
+| 陈翕   |         30 |          6 |
+| 黄军帮 |         31 |          8 |
+| 刘天宇 |         32 |          2 |
+| 吴嘉城 |         33 |          4 |
+| 夏志豪 |         34 |            |
+| 林显诚 |         35 |            |
+| 周枫   |          - |            |
+| 曾宏燊 |          - |         17 |
+| 肖峰   |          - |            |
+| 左亮   |          - |            |
+| 符文财 |          - |         25 |
+| 谢鹤鸣 |          - |            |
+| 邓炜祺 |          - |            |
+| 韦代帅 |          - |            |
+| 郭小龙 |          - |            |
+| 魏坤   |          - |            |
+| 车斌涛 |          - |            |
+| 何锦晖 |          - |            |
+| 刘仁杰 |            |            |
+| 黄萧   |            |            |
 
 
 任务备注:
 - 2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行
+- 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
