--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -8,52 +8,53 @@
 
 * 测验结果
 
-| 姓名   | 2023-09-06 |
-|-------+------------|
-| 李吉   | 1          |
-| 段文潇 | 2          |
-| 余海中 | 3          |
-| 谭鑫   | 4          |
-| 高旻昱 | 5          |
-| 麦天河 | 6          |
-| 许焕圣 | 7          |
-| 何华为 | 8          |
-| 王海波 | 9          |
-| 肖义珥 | 10         |
-| 刘广鸿 | 11         |
-| 刘翔   | 12         |
-| 段文锋 | 13         |
-| 刘虹佑 | 14         |
-| 张甘霖 | 15         |
-| 李岳元 | 16         |
-| 段京文 | 17         |
-| 古远东 | 18         |
-| 黄可彬 | 19         |
-| 苏大明 | -          |
-| 沈艺宏 | -          |
-| 李泽俊 | -          |
-| 李耀武 | -          |
-| 刘泽泉 | -          |
-| 吴幸林 | -          |
-| 唐景富 | -          |
-| 叶宇   | -          |
-| 卢德涛 | -          |
-| 陆宇轩 | -          |
-| 韦金良 | -          |
-| 饶展源 | -          |
-| 郭榕荣 | -          |
-| 贝俊霖 | -          |
-| 陈梓鑫 | -          |
-| 梁泽文 | -          |
-| 黄飞超 | -          |
-| 周永久 | -          |
-| 张桂毓 | -          |
-| 何晓东 | -          |
-| 薛进超 | -          |
-| 岑法政 |            |
-| 谢晓中 | -          |
-| 陈颖聪 | -          |
+| 姓名   | 2023-09-06 | 2023-10-31 |
+|-------+------------+------------|
+| 李吉   | 1          |            |
+| 段文潇 | 2          |          1 |
+| 余海中 | 3          |            |
+| 谭鑫   | 4          |            |
+| 高旻昱 | 5          |          4 |
+| 麦天河 | 6          |            |
+| 许焕圣 | 7          |          6 |
+| 何华为 | 8          |            |
+| 王海波 | 9          |            |
+| 肖义珥 | 10         |            |
+| 刘广鸿 | 11         |          3 |
+| 刘翔   | 12         |            |
+| 段文锋 | 13         |          2 |
+| 刘虹佑 | 14         |            |
+| 张甘霖 | 15         |          5 |
+| 李岳元 | 16         |            |
+| 段京文 | 17         |            |
+| 古远东 | 18         |            |
+| 黄可彬 | 19         |            |
+| 苏大明 | -          |            |
+| 沈艺宏 | -          |            |
+| 李泽俊 | -          |            |
+| 李耀武 | -          |            |
+| 刘泽泉 | -          |            |
+| 吴幸林 | -          |            |
+| 唐景富 | -          |            |
+| 叶宇   | -          |            |
+| 卢德涛 | -          |            |
+| 陆宇轩 | -          |            |
+| 韦金良 | -          |            |
+| 饶展源 | -          |            |
+| 郭榕荣 | -          |            |
+| 贝俊霖 | -          |            |
+| 陈梓鑫 | -          |            |
+| 梁泽文 | -          |            |
+| 黄飞超 | -          |            |
+| 周永久 | -          |            |
+| 张桂毓 | -          |            |
+| 何晓东 | -          |            |
+| 薛进超 | -          |            |
+| 岑法政 |            |            |
+| 谢晓中 | -          |            |
+| 陈颖聪 | -          |            |
 
 任务详情:
 - 2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程
+- 2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制
  
