best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -37,7 +37,7 @@
 | 盘泽强 |         21 |         15 |
 | 李德致 |         22 |         20 |
 | 王上标 |         23 |            |
-| 肖毅良 |         24 |            |
+| 肖毅良 |         24 |         29 |
 | 张明达 |         25 |         27 |
 | 周远龙 |         26 |         28 |
 | 王俊杰 |         27 |          9 |
