--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -16,9 +16,9 @@
 |---+-------+------------+------------|
 | 2 | 刘鹏   |          1 |          7 |
 | 2 | 甘成杰 |          2 |          1 |
-| 1 | 杨富   |          3 |            |
-| 1 | 江坤涛 |          4 |            |
-| 1 | 程春平 |          5 |            |
+| 1 | 杨富   |          3 |          - |
+| 1 | 江坤涛 |          4 |          - |
+| 1 | 程春平 |          5 |          - |
 | 6 | 吴淑豪 |          6 |          3 |
 | 5 | 刘金麓 |          7 |         14 |
 | 4 | 邓义柏 |          8 |         10 |
@@ -31,8 +31,8 @@
 | 3 | 官名福 |         15 |         12 |
 | 3 | 陈宇川 |         16 |         16 |
 | 2 | 杜喆   |         17 |         26 |
-| 2 | 黄颜徽 |         18 |            |
-| 4 | 罗秀洋 |         19 |            |
+| 2 | 黄颜徽 |         18 |          - |
+| 4 | 罗秀洋 |         19 |          - |
 | 5 | 王艺楠 |         20 |         18 |
 | 4 | 盘泽强 |         21 |         15 |
 | 5 | 李德致 |         22 |         20 |
@@ -47,8 +47,8 @@
 | 6 | 黄军帮 |         31 |          8 |
 | 2 | 刘天宇 |         32 |          2 |
 | 6 | 吴嘉城 |         33 |          4 |
-| 1 | 夏志豪 |         34 |            |
-| 2 | 林显诚 |         35 |            |
+| 1 | 夏志豪 |         34 |          - |
+| 2 | 林显诚 |         35 |          - |
 | 5 | 周枫   |          - |          - |
 | 5 | 曾宏燊 |          - |         17 |
 | 2 | 肖峰   |          - |            |
@@ -56,7 +56,7 @@
 | 4 | 符文财 |          - |         25 |
 | 3 | 谢鹤鸣 |          - |          - |
 | 3 | 邓炜祺 |          - |          - |
-| 1 | 韦代帅 |          - |            |
+| 1 | 韦代帅 |          - |          - |
 | 3 | 郭小龙 |          - |          - |
 | 3 | 魏坤   |          - |            |
 | 4 | 车斌涛 |          - |          - |
@@ -69,19 +69,3 @@
 - 2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 
-
- 1.夏志豪 
- 1.杨富   
- 1.江坤涛 
- 1.程春平 
- 1.韦代帅 
-
- 2.林显诚 
- 2.肖峰   
- 2.黄颜徽
- 
- 3.魏坤   
-
- 4.罗秀洋  
- 
- 6.黄萧   
