--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -5,35 +5,40 @@
 
 - 课代表: 曾凯
 
-* 测验结果
+* 测验
 
-| 组 | 姓名   | 2023-09-11 | 2023-10-30 |
-|---+-------+------------+------------|
-| 2 | 陈嘉鹏 |          1 |          2 |
-| 2 | 廖哲   |          2 |         18 |
-| 1 | 刘宁   |          3 |          7 |
-| 2 | 秦铭杉 |          4 |         14 |
-| 2 | 黄佳鹏 |          5 |         13 |
-| 4 | 覃宇江 |          6 |          4 |
-| 3 | 唐瑞钦 |          7 |          1 |
-| 1 | 曾世强 |          8 |          6 |
-| 1 | 魏智锋 |          9 |         12 |
-| 3 | 刘燃东 |         10 |         17 |
-| 3 | 陈述亮 |         11 |         16 |
-| 2 | 李境松 |         12 |         15 |
-| 4 | 刘志豪 |         13 |          3 |
-| 2 | 韦海永 |         14 |          5 |
-| 1 | 叶子超 |         15 |          8 |
-| 4 | 张翔宇 |         16 |         10 |
-| 4 | 吴志挥 |         17 |          9 |
-| 1 | 陈子健 |         18 |            |
-| 4 | 刁扬春 |         19 |            |
-| 2 | 潘嘉豪 |          - |          6 |
-| 3 | 朱荣如 |          - |            |
-| 3 | 岑宇森 |            |         19 |
-| 3 | 林宝荣 |            |            |
-| 1 | 曾凯   |            |         11 |
+#+NAME: rs
+| 组 | 姓名   | 2023-09-11 | 2023-10-30 | 2023-12-25 |
+|---+-------+------------+------------+------------|
+| 2 | 陈嘉鹏 |          1 |          2 |            |
+| 2 | 廖哲   |          2 |         18 |            |
+| 1 | 刘宁   |          3 |          7 |            |
+| 2 | 秦铭杉 |          4 |         14 |            |
+| 2 | 黄佳鹏 |          5 |         13 |            |
+| 4 | 覃宇江 |          6 |          4 |            |
+| 3 | 唐瑞钦 |          7 |          1 |            |
+| 1 | 曾世强 |          8 |          6 |            |
+| 1 | 魏智锋 |          9 |         12 |            |
+| 3 | 刘燃东 |         10 |         17 |            |
+| 3 | 陈述亮 |         11 |         16 |            |
+| 2 | 李境松 |         12 |         15 |            |
+| 4 | 刘志豪 |         13 |          3 |            |
+| 2 | 韦海永 |         14 |          5 |            |
+| 1 | 叶子超 |         15 |          8 |            |
+| 4 | 张翔宇 |         16 |         10 |            |
+| 4 | 吴志挥 |         17 |          9 |            |
+| 1 | 陈子健 |         18 |            |            |
+| 4 | 刁扬春 |         19 |            |            |
+| 2 | 潘嘉豪 |          - |          6 |            |
+| 3 | 朱荣如 |          - |            |            |
+| 3 | 岑宇森 |            |         19 |            |
+| 3 | 林宝荣 |            |            |            |
+| 1 | 曾凯   |            |         11 |            |
 
 备注:
 - 2023-09-11, 创建 helloworld、编译、运行，独立完成
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
+- 2023-12-25, 使用 Winform 实现一个 BMI 计算的应用
+
+
+
