--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -12,60 +12,61 @@
 
 * 测验结果
 
-| G | 姓名   | 2023-09-07 | 2023-10-30 |
-|---+-------+------------+------------|
-| 2 | 刘鹏   |          1 |          7 |
-| 2 | 甘成杰 |          2 |          1 |
-| 1 | 杨富   |          3 |          - |
-| 1 | 江坤涛 |          4 |          - |
-| 1 | 程春平 |          5 |          - |
-| 6 | 吴淑豪 |          6 |          3 |
-| 5 | 刘金麓 |          7 |         14 |
-| 4 | 邓义柏 |          8 |         10 |
-| 3 | 梁炽勇 |          9 |         24 |
-| 2 | 林俊贤 |         10 |         22 |
-| 5 | 黄锡东 |         11 |         13 |
-| 5 | 李毅   |         12 |         19 |
-| 4 | 李进斌 |         13 |         21 |
-| 4 | 杨耀嘉 |         14 |         23 |
-| 3 | 官名福 |         15 |         12 |
-| 3 | 陈宇川 |         16 |         16 |
-| 2 | 杜喆   |         17 |         26 |
-| 2 | 黄颜徽 |         18 |          - |
-| 4 | 罗秀洋 |         19 |          - |
-| 5 | 王艺楠 |         20 |         18 |
-| 4 | 盘泽强 |         21 |         15 |
-| 5 | 李德致 |         22 |         20 |
-| 5 | 王上标 |         23 |          - |
-| 6 | 肖毅良 |         24 |         29 |
-| 3 | 张明达 |         25 |         27 |
-| 5 | 周远龙 |         26 |         28 |
-| 6 | 王俊杰 |         27 |          9 |
-| 6 | 曾翔   |         28 |         11 |
-| 6 | 江金涛 |         29 |          5 |
-| 6 | 陈翕   |         30 |          6 |
-| 6 | 黄军帮 |         31 |          8 |
-| 2 | 刘天宇 |         32 |          2 |
-| 6 | 吴嘉城 |         33 |          4 |
-| 1 | 夏志豪 |         34 |          - |
-| 2 | 林显诚 |         35 |          - |
-| 5 | 周枫   |          - |          - |
-| 5 | 曾宏燊 |          - |         17 |
-| 2 | 肖峰   |          - |            |
-| 4 | 左亮   |          - |          - |
-| 4 | 符文财 |          - |         25 |
-| 3 | 谢鹤鸣 |          - |          - |
-| 3 | 邓炜祺 |          - |          - |
-| 1 | 韦代帅 |          - |          - |
-| 3 | 郭小龙 |          - |          - |
-| 3 | 魏坤   |          - |            |
-| 4 | 车斌涛 |          - |          - |
-| 4 | 何锦晖 |          - |         30 |
-| 3 | 刘仁杰 |            |          - |
-| 6 | 黄萧   |            |            |
+| G | 姓名   | 2023-09-07 | 2023-10-30 | 2023-12-28 |
+|---+-------+------------+------------+------------|
+| 2 | 刘鹏   |          1 |          7 |            |
+| 2 | 甘成杰 |          2 |          1 |            |
+| 1 | 杨富   |          3 |          - |            |
+| 1 | 江坤涛 |          4 |          - |            |
+| 1 | 程春平 |          5 |          - |            |
+| 6 | 吴淑豪 |          6 |          3 |            |
+| 5 | 刘金麓 |          7 |         14 |            |
+| 4 | 邓义柏 |          8 |         10 |            |
+| 3 | 梁炽勇 |          9 |         24 |            |
+| 2 | 林俊贤 |         10 |         22 |            |
+| 5 | 黄锡东 |         11 |         13 |            |
+| 5 | 李毅   |         12 |         19 |            |
+| 4 | 李进斌 |         13 |         21 |            |
+| 4 | 杨耀嘉 |         14 |         23 |            |
+| 3 | 官名福 |         15 |         12 |            |
+| 3 | 陈宇川 |         16 |         16 |            |
+| 2 | 杜喆   |         17 |         26 |            |
+| 2 | 黄颜徽 |         18 |          - |            |
+| 4 | 罗秀洋 |         19 |          - |            |
+| 5 | 王艺楠 |         20 |         18 |            |
+| 4 | 盘泽强 |         21 |         15 |            |
+| 5 | 李德致 |         22 |         20 |            |
+| 5 | 王上标 |         23 |          - |            |
+| 6 | 肖毅良 |         24 |         29 |            |
+| 3 | 张明达 |         25 |         27 |            |
+| 5 | 周远龙 |         26 |         28 |            |
+| 6 | 王俊杰 |         27 |          9 |            |
+| 6 | 曾翔   |         28 |         11 |            |
+| 6 | 江金涛 |         29 |          5 |            |
+| 6 | 陈翕   |         30 |          6 |            |
+| 6 | 黄军帮 |         31 |          8 |            |
+| 2 | 刘天宇 |         32 |          2 |            |
+| 6 | 吴嘉城 |         33 |          4 |            |
+| 1 | 夏志豪 |         34 |          - |            |
+| 2 | 林显诚 |         35 |          - |            |
+| 5 | 周枫   |          - |          - |            |
+| 5 | 曾宏燊 |          - |         17 |            |
+| 2 | 肖峰   |          - |            |            |
+| 4 | 左亮   |          - |          - |            |
+| 4 | 符文财 |          - |         25 |            |
+| 3 | 谢鹤鸣 |          - |          - |            |
+| 3 | 邓炜祺 |          - |          - |            |
+| 1 | 韦代帅 |          - |          - |            |
+| 3 | 郭小龙 |          - |          - |            |
+| 3 | 魏坤   |          - |            |            |
+| 4 | 车斌涛 |          - |          - |            |
+| 4 | 何锦晖 |          - |         30 |            |
+| 3 | 刘仁杰 |            |          - |            |
+| 6 | 黄萧   |            |            |            |
 
 
 任务备注:
 - 2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
+- 2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
 
