best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -10,7 +10,7 @@
 #+NAME: rs
 | 组 | 姓名   | 2023-09-11 | 2023-10-30 | 2023-12-25 |
 |---+-------+------------+------------+------------|
-| 2 | 陈嘉鹏 |          1 |          2 |            |
+| 2 | 陈嘉鹏 |          1 |          2 |          2 |
 | 2 | 廖哲   |          2 |         18 |            |
 | 1 | 刘宁   |          3 |          7 |            |
 | 2 | 秦铭杉 |          4 |         14 |            |
@@ -22,7 +22,7 @@
 | 3 | 刘燃东 |         10 |         17 |            |
 | 3 | 陈述亮 |         11 |         16 |            |
 | 2 | 李境松 |         12 |         15 |            |
-| 4 | 刘志豪 |         13 |          3 |            |
+| 4 | 刘志豪 |         13 |          3 |          1 |
 | 2 | 韦海永 |         14 |          5 |            |
 | 1 | 叶子超 |         15 |          8 |            |
 | 4 | 张翔宇 |         16 |         10 |            |
