--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -15,36 +15,36 @@
 | 5 | 许焕圣 | 7          |          6 |          4 |
 | 5 | 古远东 | 18         |          8 |          5 |
 | 5 | 黄可彬 | 19         |          9 |          6 |
+| 4 | 贝俊霖 | -          |          - |          7 |
+| 2 | 高旻昱 | 5          |          4 |          8 |
+| 5 | 肖义珥 | 10         |         11 |          9 |
+| 6 | 段京文 | 17         |         18 |         10 |
+| 5 | 郭榕荣 | -          |          - |         11 |
+| 2 | 刘虹佑 | 14         |          - |         12 |
+| 5 | 梁泽文 | -          |          - |         13 |
+| 5 | 何华为 | 8          |          7 |         14 |
+| 3 | 刘广鸿 | 11         |          3 |         15 |
+| 1 | 吴幸林 | -          |            |         16 |
+| 3 | 李泽俊 | -          |         15 |         17 |
+| 5 | 韦金良 | -          |         16 |         18 |
+| 1 | 苏大明 | -          |            |         19 |
+| 4 | 陈梓鑫 | -          |          - |         20 |
+| 4 | 叶宇   | -          |            |         21 |
 | 1 | 余海中 | 3          |         17 |            |
 | 1 | 谭鑫   | 4          |         13 |            |
-| 2 | 高旻昱 | 5          |          4 |            |
 | 2 | 麦天河 | 6          |          - |            |
-| 5 | 何华为 | 8          |          7 |            |
 | 4 | 王海波 | 9          |            |            |
-| 5 | 肖义珥 | 10         |         11 |            |
-| 3 | 刘广鸿 | 11         |          3 |            |
 | 1 | 刘翔   | 12         |            |            |
 | 3 | 段文锋 | 13         |          2 |            |
-| 2 | 刘虹佑 | 14         |          - |            |
 | 3 | 张甘霖 | 15         |          5 |            |
 | 1 | 李岳元 | 16         |            |            |
-| 6 | 段京文 | 17         |         18 |            |
-| 1 | 苏大明 | -          |            |            |
 | 1 | 沈艺宏 | -          |            |            |
-| 3 | 李泽俊 | -          |         15 |            |
 | 2 | 李耀武 | -          |         21 |            |
 | 6 | 刘泽泉 | -          |         20 |            |
-| 1 | 吴幸林 | -          |            |            |
 | 3 | 唐景富 | -          |          - |            |
-| 4 | 叶宇   | -          |            |            |
 | 4 | 卢德涛 | -          |          - |            |
 | 1 | 陆宇轩 | -          |          - |            |
-| 5 | 韦金良 | -          |         16 |            |
 | 3 | 饶展源 | -          |            |            |
-| 5 | 郭榕荣 | -          |          - |            |
-| 4 | 贝俊霖 | -          |          - |            |
-| 4 | 陈梓鑫 | -          |          - |            |
-| 5 | 梁泽文 | -          |          - |            |
 | 6 | 周永久 | -          |          - |            |
 | 6 | 张桂毓 | -          |         19 |            |
 | 4 | 何晓东 | -          |          - |            |
@@ -52,6 +52,8 @@
 | 2 | 岑法政 |            |            |            |
 | 4 | 谢晓中 | -          |          - |            |
 | 3 | 陈颖聪 | -          |         10 |            |
+
+
 
 任务详情:
 - 2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程
