best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -10,25 +10,28 @@
 |     1 |     2 |     3 |     4 |     5 |   6 |
 | 吴嘉城 | 曾宏燊 | 杨耀嘉 | 刘仁杰 | 林俊贤 | 杨富 |
 
-* 测验结果
+* 结果
 
 | G | 姓名   | 2023-09-07 | 2023-10-30 | 2023-12-28 |
 |---+-------+------------+------------+------------|
-| 2 | 刘鹏   |          1 |          7 |            |
-| 2 | 甘成杰 |          2 |          1 |            |
+| 2 | 甘成杰 |          2 |          1 |          1 |
+| 3 | 官名福 |         15 |         12 |          2 |
+| 6 | 肖毅良 |         24 |         29 |          3 |
+| 2 | 刘鹏   |          1 |          7 |          4 |
+| 2 | 刘天宇 |         32 |          2 |          5 |
+| 2 | 林俊贤 |         10 |         22 |          6 |
+| 6 | 吴淑豪 |          6 |          3 |          7 |
+| 6 | 江金涛 |         29 |          5 |          8 |
 | 1 | 杨富   |          3 |          - |            |
 | 1 | 江坤涛 |          4 |          - |            |
 | 1 | 程春平 |          5 |          - |            |
-| 6 | 吴淑豪 |          6 |          3 |            |
 | 5 | 刘金麓 |          7 |         14 |            |
 | 4 | 邓义柏 |          8 |         10 |            |
 | 3 | 梁炽勇 |          9 |         24 |            |
-| 2 | 林俊贤 |         10 |         22 |            |
 | 5 | 黄锡东 |         11 |         13 |            |
 | 5 | 李毅   |         12 |         19 |            |
 | 4 | 李进斌 |         13 |         21 |            |
 | 4 | 杨耀嘉 |         14 |         23 |            |
-| 3 | 官名福 |         15 |         12 |            |
 | 3 | 陈宇川 |         16 |         16 |            |
 | 2 | 杜喆   |         17 |         26 |            |
 | 2 | 黄颜徽 |         18 |          - |            |
@@ -37,15 +40,12 @@
 | 4 | 盘泽强 |         21 |         15 |            |
 | 5 | 李德致 |         22 |         20 |            |
 | 5 | 王上标 |         23 |          - |            |
-| 6 | 肖毅良 |         24 |         29 |            |
 | 3 | 张明达 |         25 |         27 |            |
 | 5 | 周远龙 |         26 |         28 |            |
 | 6 | 王俊杰 |         27 |          9 |            |
 | 6 | 曾翔   |         28 |         11 |            |
-| 6 | 江金涛 |         29 |          5 |            |
 | 6 | 陈翕   |         30 |          6 |            |
 | 6 | 黄军帮 |         31 |          8 |            |
-| 2 | 刘天宇 |         32 |          2 |            |
 | 6 | 吴嘉城 |         33 |          4 |            |
 | 1 | 夏志豪 |         34 |          - |            |
 | 2 | 林显诚 |         35 |          - |            |
