--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -30,28 +30,28 @@
 | 1 | 苏大明 | -          |            |         19 |
 | 4 | 陈梓鑫 | -          |          - |         20 |
 | 4 | 叶宇   | -          |            |         21 |
-| 1 | 余海中 | 3          |         17 |            |
-| 1 | 谭鑫   | 4          |         13 |            |
-| 2 | 麦天河 | 6          |          - |            |
-| 4 | 王海波 | 9          |            |            |
+| 3 | 张甘霖 | 15         |          5 |         22 |
+| 1 | 余海中 | 3          |         17 |         23 |
+| 1 | 谭鑫   | 4          |         13 |         24 |
+| 2 | 李耀武 | -          |         21 |         25 |
+| 2 | 麦天河 | 6          |          - |         26 |
+| 3 | 唐景富 | -          |          - |         27 |
+| 4 | 王海波 | 9          |            |         28 |
+| 3 | 陈颖聪 | -          |         10 |         29 |
+| 3 | 饶展源 | -          |            |         30 |
+| 4 | 谢晓中 | -          |          - |         30 |
+| 1 | 沈艺宏 | -          |            |         32 |
 | 1 | 刘翔   | 12         |            |            |
 | 3 | 段文锋 | 13         |          2 |            |
-| 3 | 张甘霖 | 15         |          5 |            |
 | 1 | 李岳元 | 16         |            |            |
-| 1 | 沈艺宏 | -          |            |            |
-| 2 | 李耀武 | -          |         21 |            |
 | 6 | 刘泽泉 | -          |         20 |            |
-| 3 | 唐景富 | -          |          - |            |
 | 4 | 卢德涛 | -          |          - |            |
 | 1 | 陆宇轩 | -          |          - |            |
-| 3 | 饶展源 | -          |            |            |
 | 6 | 周永久 | -          |          - |            |
 | 6 | 张桂毓 | -          |         19 |            |
 | 4 | 何晓东 | -          |          - |            |
 | 3 | 薛进超 | -          |            |            |
 | 2 | 岑法政 |            |            |            |
-| 4 | 谢晓中 | -          |          - |            |
-| 3 | 陈颖聪 | -          |         10 |            |
 
 
 
