--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -50,7 +50,7 @@
 | 6 | 周永久 | -          |          - |            |
 | 6 | 张桂毓 | -          |         19 |            |
 | 4 | 何晓东 | -          |          - |            |
-| 3 | 薛进超 | -          |            |            |
+| 3 | 薛进超 | -          |            |         33 |
 | 2 | 岑法政 |            |            |            |
 
 
