--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -23,7 +23,7 @@
 | 3 | 陈述亮 |         11 |         16 |            |
 | 2 | 李境松 |         12 |         15 |            |
 | 4 | 刘志豪 |         13 |          3 |          1 |
-| 2 | 韦海永 |         14 |          5 |            |
+| 2 | 韦海永 |         14 |          5 |          6 |
 | 1 | 叶子超 |         15 |          8 |            |
 | 4 | 张翔宇 |         16 |         10 |            |
 | 4 | 吴志挥 |         17 |          9 |          4 |
