best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -13,32 +13,67 @@
 | 4 | 刘志豪 |         13 |          3 |          1 |
 | 2 | 陈嘉鹏 |          1 |          2 |          2 |
 | 4 | 覃宇江 |          6 |          4 |          3 |
-| 4 | 吴志挥 |         17 |          9 |          4 |
-| 3 | 刘燃东 |         10 |         17 |          5 |
+| 4 | 吴志挥 |         17 |         10 |          4 |
+| 3 | 刘燃东 |         10 |         18 |          5 |
 | 2 | 韦海永 |         14 |          5 |          6 |
-| 2 | 潘嘉豪 |          - |          6 |          6 |
-| 3 | 唐瑞钦 |          7 |          1 |          7 |
-| 1 | 曾世强 |          8 |          6 |          8 |
-| 4 | 张翔宇 |         16 |         10 |          9 |
-| 2 | 李境松 |         12 |         15 |         10 |
-| 1 | 刘宁   |          3 |          7 |         11 |
-| 3 | 林宝荣 |            |            |         11 |
-| 2 | 黄佳鹏 |          5 |         13 |         12 |
-| 1 | 魏智锋 |          9 |         12 |         13 |
-| 3 | 朱荣如 |          - |            |         14 |
-| 2 | 秦铭杉 |          4 |         14 |         15 |
-| 4 | 刁扬春 |         19 |            |         16 |
-| 1 | 曾凯   |            |         11 |         17 |
-| 1 | 叶子超 |         15 |          8 |            |
-| 1 | 陈子健 |         18 |            |            |
-| 2 | 廖哲   |          2 |         18 |            |
-| 3 | 陈述亮 |         11 |         16 |            |
-| 3 | 岑宇森 |            |         19 |            |
+| 2 | 潘嘉豪 |          - |          6 |          7 |
+| 3 | 唐瑞钦 |          7 |          1 |          8 |
+| 1 | 曾世强 |          8 |          6 |          9 |
+| 4 | 张翔宇 |         16 |         11 |         10 |
+| 2 | 李境松 |         12 |         16 |         11 |
+| 1 | 刘宁   |          3 |          8 |         12 |
+| 3 | 林宝荣 |            |            |         13 |
+| 2 | 黄佳鹏 |          5 |         14 |         14 |
+| 1 | 魏智锋 |          9 |         13 |         15 |
+| 3 | 朱荣如 |          - |            |         16 |
+| 2 | 秦铭杉 |          4 |         15 |         17 |
+| 4 | 刁扬春 |         19 |            |         18 |
+| 1 | 曾凯   |            |         12 |         19 |
+| 1 | 叶子超 |         15 |          9 |         20 |
+| 3 | 岑宇森 |            |         20 |         21 |
+| 3 | 陈述亮 |         11 |         17 |         22 |
+| 1 | 陈子健 |         18 |            |         23 |
+| 2 | 廖哲   |          2 |         19 |            |
 
 备注:
 - 2023-09-11, 创建 helloworld、编译、运行，独立完成
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-25, 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 
+# #+begin_src elisp :var tb=rs
+#   (cl-loop for i in tb
+#            for f1 = (if (numberp (nth 2 i)) (- 101 (nth 2 i)) 60)
+#            for f2 = (if (numberp (nth 3 i)) (- 101 (nth 3 i)) 60)
+#            for f3 = (if (numberp (nth 4 i)) (- 101 (nth 4 i)) 60)
+#            collect (list 0 (nth 1 i) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))))
+# #+end_src
+
+期末分数 (2024.1.15):
+| No. | Name  | Test1 | Test2 | Test3 | Final |
+|-----+-------+-------+-------+-------+-------|
+|   1 | 陈嘉鹏 |   100 |    99 |    99 |    99 |
+|   2 | 覃宇江 |    95 |    97 |    98 |    97 |
+|   3 | 唐瑞钦 |    94 |   100 |    93 |    96 |
+|   4 | 刘志豪 |    88 |    98 |   100 |    95 |
+|   5 | 韦海永 |    87 |    96 |    95 |    93 |
+|   6 | 曾世强 |    93 |    95 |    92 |    93 |
+|   7 | 刘宁   |    98 |    93 |    89 |    93 |
+|   8 | 吴志挥 |    84 |    91 |    97 |    91 |
+|   9 | 刘燃东 |    91 |    83 |    96 |    90 |
+|  10 | 黄佳鹏 |    96 |    87 |    87 |    90 |
+|  11 | 张翔宇 |    85 |    90 |    91 |    89 |
+|  12 | 魏智锋 |    92 |    88 |    86 |    89 |
+|  13 | 秦铭杉 |    97 |    86 |    84 |    89 |
+|  14 | 李境松 |    89 |    85 |    90 |    88 |
+|  15 | 叶子超 |    86 |    92 |    81 |    86 |
+|  16 | 陈述亮 |    90 |    84 |    79 |    84 |
+|  17 | 潘嘉豪 |    60 |    95 |    94 |    83 |
+|  18 | 廖哲   |    99 |    82 |    60 |    80 |
+|  19 | 曾凯   |    60 |    89 |    82 |    77 |
+|  20 | 刁扬春 |    82 |    60 |    83 |    75 |
+|  21 | 岑宇森 |    60 |    81 |    80 |    74 |
+|  22 | 陈子健 |    83 |    60 |    78 |    74 |
+|  23 | 林宝荣 |    60 |    60 |    88 |    69 |
+|  24 | 朱荣如 |    60 |    60 |    85 |    68 |
 
 
