--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -66,7 +66,7 @@
 
 
 任务备注:
-- 2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行
+- 2023-09-07, 01-张三.txt, 创建源文件、编写代码、编译、运行
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
 
