--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -70,3 +70,16 @@
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
 
+
+* 寒假作业 (2024-01-15)
+
+做一个求取 BMI 的控制台应用:
+1. 首先，提示用户输入身高和体重
+2. 其次，根据用户输入的身高和体重，计算 BMI，并判定身体状态
+3. 最后，输出给用户
+4. 进入第一步，循环
+
+参考网站: https://cn.onlinebmicalculator.com/
+
+其他:
+- 如果有兴趣的同学，可以自行学习一下 Winform 应用的创建，尝试使用窗口的方式将这个功能实现一下
