best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -74,10 +74,10 @@
 * 寒假作业 (2024-01-15)
 
 做一个求取 BMI 的控制台应用:
-1. 首先，提示用户输入身高和体重
-2. 其次，根据用户输入的身高和体重，计算 BMI，并判定身体状态
-3. 最后，输出给用户
-4. 进入第一步，循环
+1. 首先，提示用户输入身高和体重 (=Console.ReadLine=)
+2. 其次，根据用户输入的身高和体重，计算 BMI，并判定身体状态 (=if..else=)
+3. 最后，输出给用户 (=Console.WriteLine=)
+4. 进入第一步，循环 (=for/while=)
 
 参考网站: https://cn.onlinebmicalculator.com/
 
