best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -12,6 +12,7 @@
 
 * 结果
 
+#+NAME: rs
 | G | 姓名   | 2023-09-07 | 2023-10-30 | 2023-12-28 |
 |---+-------+------------+------------+------------|
 | 2 | 甘成杰 |          2 |          1 |          1 |
@@ -70,6 +71,67 @@
 - 2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制
 - 2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
 
+
+# #+begin_src elisp :var tb=rs
+#   (cl-loop for i in tb
+#            for f1 = (let ((f (nth 2 i))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 70)))
+#            for f2 = (let ((f (nth 3 i))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 60)))
+#            for f3 = (let ((f (nth 4 i))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 60)))
+#            collect (list 0 (nth 1 i) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))))
+# #+end_src
+
+期末考试成绩 (2024-01-15):
+| No | Name  | Test1 | Test2 | Test3 | Final |
+|----+-------+-------+-------+-------+-------|
+|  1 | 甘成杰 |    99 |   100 |   100 |   100 |
+|  2 | 刘鹏   |   100 |    94 |    97 |    97 |
+|  3 | 吴淑豪 |    95 |    98 |    94 |    96 |
+|  4 | 官名福 |    86 |    89 |    99 |    91 |
+|  5 | 林俊贤 |    91 |    79 |    95 |    88 |
+|  6 | 刘天宇 |    69 |    99 |    96 |    88 |
+|  7 | 江金涛 |    72 |    96 |    93 |    87 |
+|  8 | 肖毅良 |    77 |    72 |    98 |    82 |
+|  9 | 邓义柏 |    93 |    91 |    60 |    81 |
+| 10 | 刘金麓 |    94 |    87 |    60 |    80 |
+| 11 | 黄锡东 |    90 |    88 |    60 |    79 |
+| 12 | 李毅   |    89 |    82 |    60 |    77 |
+| 13 | 陈宇川 |    85 |    85 |    60 |    77 |
+| 14 | 江坤涛 |    97 |    70 |    60 |    76 |
+| 15 | 杨富   |    98 |    70 |    60 |    76 |
+| 16 | 梁炽勇 |    92 |    77 |    60 |    76 |
+| 17 | 李进斌 |    88 |    80 |    60 |    76 |
+| 18 | 程春平 |    96 |    70 |    60 |    75 |
+| 19 | 杨耀嘉 |    87 |    78 |    60 |    75 |
+| 20 | 王艺楠 |    81 |    83 |    60 |    75 |
+| 21 | 盘泽强 |    80 |    86 |    60 |    75 |
+| 22 | 王俊杰 |    74 |    92 |    60 |    75 |
+| 23 | 陈翕   |    71 |    95 |    60 |    75 |
+| 24 | 吴嘉城 |    68 |    97 |    60 |    75 |
+| 25 | 曾翔   |    73 |    90 |    60 |    74 |
+| 26 | 黄军帮 |    70 |    93 |    60 |    74 |
+| 27 | 杜喆   |    84 |    75 |    60 |    73 |
+| 28 | 李德致 |    79 |    81 |    60 |    73 |
+| 29 | 罗秀洋 |    82 |    70 |    60 |    71 |
+| 30 | 黄颜徽 |    83 |    70 |    60 |    71 |
+| 31 | 曾宏燊 |    70 |    84 |    60 |    71 |
+| 32 | 张明达 |    76 |    74 |    60 |    70 |
+| 33 | 王上标 |    78 |    70 |    60 |    69 |
+| 34 | 周远龙 |    75 |    73 |    60 |    69 |
+| 35 | 符文财 |    70 |    76 |    60 |    69 |
+| 36 | 韦代帅 |    70 |    70 |    60 |    67 |
+| 37 | 谢鹤鸣 |    70 |    70 |    60 |    67 |
+| 38 | 邓炜祺 |    70 |    70 |    60 |    67 |
+| 39 | 郭小龙 |    70 |    70 |    60 |    67 |
+| 40 | 刘仁杰 |    70 |    70 |    60 |    67 |
+| 41 | 左亮   |    70 |    70 |    60 |    67 |
+| 42 | 车斌涛 |    70 |    70 |    60 |    67 |
+| 43 | 周枫   |    70 |    70 |    60 |    67 |
+| 44 | 何锦晖 |    70 |    71 |    60 |    67 |
+| 45 | 夏志豪 |    67 |    70 |    60 |    66 |
+| 46 | 林显诚 |    66 |    70 |    60 |    65 |
+| 47 | 肖峰   |    70 |    60 |    60 |    63 |
+| 48 | 魏坤   |    70 |    60 |    60 |    63 |
+| 49 | 黄萧   |    70 |    60 |    60 |    63 |
 
 * 寒假作业 (2024-01-15)
 
