best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -81,7 +81,7 @@
 * 寒假作业 (2024-01-15)
 
 完成题目图示的题目:
-[[file:img/191.png]]
+[[file:img/191-3338282.png]]
 
 补充:
 - 其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试
