--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -60,12 +60,65 @@
 - 2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 
 # #+begin_src elisp :var tb=rs
-#   (cl-loop for i in tb
-#            for f1 = (let ((f (nth 2 i))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 70)))
-#            for f2 = (let ((f (nth 3 i))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 60)))
-#            for f3 = (let ((f (nth 4 i))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 60)))
-#            collect (list 0 (nth 1 i) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))))
+#   (cl-loop with fn =
+#            (lambda (line n)
+#              (let ((f (nth n line))) (if (numberp f) (- 101 f) (if (> (length f) 0) 70 60))))
+#            for line in tb
+#            for f1 = (funcall fn line 2)
+#            for f2 = (funcall fn line 3)
+#            for f3 = (funcall fn line 4)
+#            collect (list (nth 1 line) f1 f2 f3 (round (/ (+ f1 f2 f3) 3.0))) into rs
+#            finally
+#            (return
+#             (cl-loop for i from 1
+#                      for line in (cl-sort rs (lambda (x y) (> (nth 4 x) (nth 4 y))))
+#                      collect (cons i line))))
 # #+end_src
+
+#+RESULTS:
+|  1 | 段文潇 |  99 | 100 |  99 | 99 |
+|  2 | 李吉   | 100 |  89 | 100 | 96 |
+|  3 | 许焕圣 |  94 |  95 |  97 | 95 |
+|  4 | 高旻昱 |  96 |  97 |  93 | 95 |
+|  5 | 古远东 |  83 |  93 |  96 | 91 |
+|  6 | 肖义珥 |  91 |  90 |  92 | 91 |
+|  7 | 何华为 |  93 |  94 |  87 | 91 |
+|  8 | 刘广鸿 |  90 |  98 |  86 | 91 |
+|  9 | 黄可彬 |  82 |  92 |  95 | 90 |
+| 10 | 张甘霖 |  86 |  96 |  79 | 87 |
+| 11 | 余海中 |  98 |  84 |  78 | 87 |
+| 12 | 谭鑫   |  97 |  88 |  77 | 87 |
+| 13 | 段京文 |  84 |  83 |  91 | 86 |
+| 14 | 黄飞超 |  70 |  87 |  98 | 85 |
+| 15 | 段文锋 |  88 |  99 |  67 | 85 |
+| 16 | 刘虹佑 |  87 |  70 |  89 | 82 |
+| 17 | 李泽俊 |  70 |  86 |  84 | 80 |
+| 18 | 麦天河 |  95 |  70 |  75 | 80 |
+| 19 | 韦金良 |  70 |  85 |  83 | 79 |
+| 20 | 贝俊霖 |  70 |  70 |  94 | 78 |
+| 21 | 陈颖聪 |  70 |  91 |  72 | 78 |
+| 22 | 郭榕荣 |  70 |  70 |  90 | 77 |
+| 23 | 梁泽文 |  70 |  70 |  88 | 76 |
+| 24 | 李耀武 |  70 |  80 |  76 | 75 |
+| 25 | 王海波 |  92 |  60 |  73 | 75 |
+| 26 | 陈梓鑫 |  70 |  70 |  81 | 74 |
+| 27 | 吴幸林 |  70 |  60 |  85 | 72 |
+| 28 | 张桂毓 |  70 |  82 |  63 | 72 |
+| 29 | 苏大明 |  70 |  60 |  82 | 71 |
+| 30 | 唐景富 |  70 |  70 |  74 | 71 |
+| 31 | 刘翔   |  89 |  60 |  65 | 71 |
+| 32 | 刘泽泉 |  70 |  81 |  62 | 71 |
+| 33 | 叶宇   |  70 |  60 |  80 | 70 |
+| 34 | 谢晓中 |  70 |  70 |  71 | 70 |
+| 35 | 陆宇轩 |  70 |  70 |  66 | 69 |
+| 36 | 李岳元 |  85 |  60 |  61 | 69 |
+| 37 | 周永久 |  70 |  70 |  64 | 68 |
+| 38 | 饶展源 |  70 |  60 |  71 | 67 |
+| 39 | 何晓东 |  70 |  70 |  60 | 67 |
+| 40 | 沈艺宏 |  70 |  60 |  69 | 66 |
+| 41 | 薛进超 |  70 |  60 |  68 | 66 |
+| 42 | 卢德涛 |  70 |  70 |  59 | 66 |
+| 43 | 岑法政 |  60 |  60 |  60 | 60 |
 
 期末考试成绩 (2024-01-16):
 | 名次 | 名字   | Test1 | Test2 | Test3 | Final |
@@ -111,7 +164,7 @@
 |  39 | 何晓东 |    70 |    70 |    60 |    67 |
 |  40 | 沈艺宏 |    70 |    60 |    69 |    66 |
 |  41 | 薛进超 |    70 |    60 |    68 |    66 |
-|  42 | 卢德涛 |    70 |    70 |    59 |    66 |
+|  42 | 卢德涛 |    70 |    70 |    60 |    66 |
 |  43 | 岑法政 |    60 |    60 |    60 |    60 |
 
 
